cmake_minimum_required(VERSION 2.6)

project(testing_algo)

add_subdirectory(BooleanOperator)
add_subdirectory(Decimation)
add_subdirectory(Export)
add_subdirectory(Filtering)
add_subdirectory(Geometry)
add_subdirectory(Histogram)
#add_subdirectory(ImplicitHierarchicalMesh)
add_subdirectory(Import)
add_subdirectory(LinearSolving)
add_subdirectory(MC)
add_subdirectory(Modelisation)
add_subdirectory(MovingObjects)
#add_subdirectory(Multiresolution)
add_subdirectory(ProgressiveMesh)
add_subdirectory(Remeshing)
add_subdirectory(Render)
add_subdirectory(Selection)
add_subdirectory(Simulation)
add_subdirectory(Tiling)
add_subdirectory(Topo)
